--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "./lib/roll.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/comp426-2022-fall/a03-edcho2019.git"
   },
   "author": "edcho2019",
-  "license": "MIT",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a03-edcho2019/issues"
   },
   "homepage": "https://github.com/comp426-2022-fall/a03-edcho2019#readme",
   "bin": {
-    "roll-dice": "./bin/cli.js"
+    "roll-dice": "bin/cli.js"
   },
   "dependencies": {
     "minimist": "^1.2.7"
   },
   "compilerOptions": {
     "baseUrl": "."
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
