--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/comp426-2022-fall/a03-edcho2019.git"
   },
   "author": "edcho2019",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a03-edcho2019/issues"
   },
